Fix approach section top and bottom whitespace

--- a/src/scss/sections/_approach.scss
+++ b/src/scss/sections/_approach.scss
@@ -1,8 +1,9 @@
 .approach {
-    padding: 105px 0;
+    padding: 96px 0 93px;
     background-color: $red;
 
     h2 {
+        margin-top: 0;
         margin-bottom: 75px;
     }
 
